cmake_minimum_required(VERSION 3.11)

set(PACKAGE_NAME CMAKE_TEST_PROJECT)
set(PACKAGE_VERSION 1.1.0)

project(${PACKAGE_NAME} VERSION ${PACKAGE_VERSION} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

message(STATUS "PACKAGE_NAME: ${PACKAGE_NAME}")
message(STATUS "PACKAGE_VERSION: ${PACKAGE_VERSION}")

add_executable(${PACKAGE_NAME}_MAIN main.cpp)
target_compile_options(${PACKAGE_NAME}_MAIN PRIVATE
    -Wall -Wextra -Wpedantic -Werror
)